Fix the overflow issue in screen size 600px and down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ body {
   background: url(../images/bg.jpg) no-repeat;
   background-size: cover;
   background-position: center;
+  overflow: hidden;
   pointer-events: auto;
   transition: 0.3s ease;
 }
@@ -547,24 +548,8 @@ body {
 /* Media queries */
 /* For screen sizes from 600px wide and down */
 @media screen and (max-width: 600px) {
-  body {
+  .main {
     overflow: hidden;
-  }
-
-  .container {
-    display: inline-block;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-  }
-
-  .home {
-    left: 0;
-    width: 100%;
-    max-width: 300px;
-    margin: 15rem 1rem;
-    justify-content: center;
-    align-items: center;
   }
 
   .home-content {
@@ -604,12 +589,7 @@ body {
     font-weight: 600;
   }
 
-  .quiz-section {
-    position: absolute;
-    left: 100%;
-    width: 100%;
-    height: 100%;
-  }
+
 
   .quiz-section .quiz-box {
     max-width: 300px;
